--- a/2.md
+++ b/2.md
@@ -97,7 +97,8 @@ def add(one, two)
 add(two = 10, one = 20)
 ```
 
-> 可以尝试下 下面的代码
+> 可以尝试下 下面的代码:
+
 ```python
 def s(a, *args, **word):
     print a, args, word
